--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,13 @@
 {
-    "require": {
-        "nesbot/carbon": "^2.12"
+  "require": {
+    "nesbot/carbon": "^2.12"
+  },
+  "autoload": {
+    "psr-4": {
+      "Project\\": [
+        "Models/",
+        "Database/"
+      ]
     }
+  }
 }
